--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Flickr Public API</title>
 </head>
 <body>
+  <h1>Flickr Photo Stream</h1>
   <div id="main"></div>
   <script type="text/javascript" src="public/build/bundle.js" charset="utf-8"></script>
 </body>
