--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flickr Public API</title>
+  <title>Flickr Photo Stream</title>
 </head>
 <body>
   <h1>Flickr Photo Stream</h1>
